k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchat-deployment
  labels:
    app: techchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techchat
  template:
    metadata:
      labels:
        app: techchat
    spec:
      containers:
      - name: techchat-container
        # Update this exact line:
        image: docker.io/lasitha667/techchat-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
