k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchat-service
spec:
  selector:
    app: techchat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
